<resources>
    <string name="app_name">ShopProject</string>
    <string name="menu_create_order">Create Order</string>
    <string name="order_btn">Order</string>
    <string name="imagePlaceholderDesc">product image</string>
    <string name="menu_login_user">Login</string>
    <string name="menu_register_user">Register</string>
    <string name="login_user_email">Email address</string>
    <string name="login_user_password">Password</string>
    <string name="login_user_login_btn">Login</string>
    <string name="register_user_password">Password</string>
    <string name="register_user_register_btn">Register</string>
    <string name="register_user_email">Address Email</string>
    <string name="register_user_password2">Repeat Password</string>
    <string name="register_user_name">Name</string>
    <string name="register_user_city">City</string>
    <string name="register_user_zip_code">ZIP</string>
    <string name="register_user_address_1">Address 1</string>
    <string name="register_user_address_2">Address 2</string>
    <string name="spinner_label">Select Product</string>
    <string name="priceTotalLabel">Price Total</string>
    <string name="login_user_register_btn">Register</string>
    <string name="order_add_btn">Add</string>
    <string name="menu_logout_user">Logout</string>
    <string name="menu_author">Author</string>
    <string name="author_info">Author: Oskar Kosobucki</string>
    <string name="author_date" translatable="false">12.03.2022</string>
</resources>
