<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/spinner_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintLeft_toLeftOf="@id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/orderBtn"
        app:layout_constraintStart_toStartOf="@id/orderBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.slider.Slider
        android:id="@+id/qty_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="10"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <Button
        android:id="@+id/order_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qty_slider" />

    <ListView
        android:id="@+id/cart_list_view"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/order_add_btn" />


    <TextView
        android:id="@+id/priceTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/priceTotal"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:text="@string/priceTotalLabel"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/cart_list_view"
        app:layout_constraintTop_toBottomOf="@id/cart_list_view" />

    <TextView
        android:id="@+id/priceTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/priceTotalLabel"
        app:layout_constraintLeft_toRightOf="@id/priceTotalLabel" />


    <Button
        android:id="@+id/orderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/order_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
